<resources>
    <string name="app_name">E Commerce App</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Dont Have An Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="al_ready_have_an_account">Al ready Have An Account</string>
    <string name="lets_get_started">Lets get started</string>

    <string name="first_slide">Chooes Your Products</string>
    <string name="second_slide">Fast Delivery </string>
    <string name="third_slide">Good Service </string>

    <string name="description"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been standard dummy text ever since the </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="new_products">New Products</string>
    <string name="see_all">See All</string>
    <string name="category">Category</string>
    <string name="popular_products">Popular Products</string>
    <string name="category_name">Category Name</string>
    <string name="_34_0">$ 34.0</string>
    <string name="woman_t_shirt">Woman T shirt</string>
    <string name="my_cart">My Cart</string>
    <string name="logout">Logout</string>
    <string name="total_price_40">Total Price : 40$</string>
    <string name="current_date">Current Date</string>
    <string name="current_time">Current Time</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="total_price">Total Price</string>
    <string name="total_quantity">Total_Quantity</string>
    <string name="phone_number">Phone Number</string>

</resources>