<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/designlogin"
    tools:context=".Activity.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:includeFontPadding="false"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/textheadline"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/baseline_person_2_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:padding="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:padding="15sp"
        app:endIconMode="password_toggle" />


    <Button
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:onClick="signup"
        android:padding="15sp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#ACA8A8"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="@color/pink"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>